// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index -> ReservationDetail -> components -> ActionBar -> CopyPermitView CopyPermitView should initial fine 1`] = `
<ContentView
  cancelText="Cancel"
  confirmText="OK"
  initialData={
    Object {
      "batchID": "222",
      "currentDate": "2018/09/18",
      "dateFormat": "YYYY-MM-DD",
      "permitID": "111",
      "receiptID": "333",
    }
  }
  message=""
  permitEvents={
    Array [
      Object {
        "id": 21,
        "name": "event1",
        "selected": false,
      },
      Object {
        "id": 22,
        "name": "event2",
        "selected": false,
      },
      Object {
        "id": 23,
        "name": "event3",
        "selected": false,
      },
    ]
  }
  redirect={[Function]}
  showCancel={false}
  title="Confirm"
>
  <div
    className="copy-permit-content"
  >
    <div
      className="copy-permit-content__event"
    >
      <p>
        This reservation has multiple events.
      </p>
      <div>
        <p>
          Select the event you want to copy
        </p>
        <div>
          <Dropdown
            autoOpen={false}
            data={
              Array [
                Object {
                  "text": "event1",
                  "value": 21,
                },
                Object {
                  "text": "event2",
                  "value": 22,
                },
                Object {
                  "text": "event3",
                  "value": 23,
                },
              ]
            }
            defaultValue={21}
            filterPlaceholder="Filter..."
            fuzzyQuery={false}
            noResult="No results found."
            onChange={[Function]}
            placeholder="Select one..."
            showAll={true}
            showDeselectall={false}
            showTxtOnlyCheckedOneItem={true}
            theme="flat"
            txtSuffix="selected"
            visible={true}
          >
            <div
              className="aaui-dropdown"
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
            >
              <button
                aria-label="event1"
                className="aaui-dropdown__button aaui-dropdown-btn-flat"
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                role="button"
                type="button"
              >
                <div
                  className="aaui-dropdown__button-text"
                  title=""
                >
                   event1
                </div>
                <i
                  className="icon aaui-dropdown__button-icon icon-chevron-down"
                />
              </button>
              <div
                aria-expanded={false}
                className="aaui-dropdown__menu-wrapper  u-hidden"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                role="combobox"
                tabIndex={0}
              >
                <div
                  className="aaui-dropdown__menu"
                >
                  <ul
                    aria-expanded={false}
                    className=""
                    role="listbox"
                  >
                    <li
                      className=" is-selected"
                      key="21"
                      onClick={[Function]}
                      role="option"
                    >
                      <span>
                        event1
                      </span>
                    </li>
                    <li
                      className=""
                      key="22"
                      onClick={[Function]}
                      role="option"
                    >
                      <span>
                        event2
                      </span>
                    </li>
                    <li
                      className=""
                      key="23"
                      onClick={[Function]}
                      role="option"
                    >
                      <span>
                        event3
                      </span>
                    </li>
                  </ul>
                  <div>
                    <div
                      className="aaui-dropdown__menu-footer"
                    >
                      <div
                        className="u-hidden"
                      >
                        <i
                          className="icon icon-spinner"
                        />
                         Loading...
                      </div>
                      <div />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Dropdown>
        </div>
      </div>
    </div>
    <div
      className="copy-permit-content__date"
    >
      <p>
        Enter the start date of your new reservation
      </p>
      <div>
        <InputDate
          allowBlank={false}
          allowKeySpin={true}
          allowMouseSpin={false}
          className=""
          currency="USD"
          data-qa-id=""
          disabled={false}
          format="YYYY-MM-DD"
          icon=""
          iconHint=""
          id=""
          items={Array []}
          listClassName=""
          listConfig={
            Object {
              "todayBehavior": 2,
            }
          }
          listMaxHeight="300px"
          listPopupOptions={Object {}}
          listWidth="auto"
          min="2018/09/18"
          name=""
          onBlur={[Function]}
          onCalendarClose={[Function]}
          onCalendarOpen={[Function]}
          onFocus={[Function]}
          onListClose={[Function]}
          onListOpen={[Function]}
          onTextChange={[Function]}
          onValueChange={[Function]}
          placeHolder=""
          prefix="an"
          showClear={true}
          showSpinner={false}
          showTrigger={true}
          showTrigger2={false}
          size="md"
          textAlign="left"
          timeStep={30}
          triggerIcon="icon-calendar-m"
          triggerIcon2="icon-clock-m"
          triggerIconHint=""
          triggerIconHint2=""
          triggerIconToggle=""
          triggerIconToggle2=""
          value="2018/09/18"
        >
          <div
            className="an-input-date input-group buttons-1 input-group--md"
          >
            <input
              className="input input-group__field textalign-left input__field"
              data-qa-id=""
              disabled={false}
              id=""
              name=""
              onBlur={[Function]}
              onChange={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              placeholder=""
              type="text"
            />
            <a
              aria-label=""
              className="input-group__item button-toggler"
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <i
                aria-label="chevron icon"
                className="icon icon-calendar-m"
              />
            </a>
          </div>
        </InputDate>
      </div>
    </div>
  </div>
</ContentView>
`;

exports[`index -> ReservationDetail -> components -> ActionBar -> CopyPermitView dropdown is null when event is only one 1`] = `
<ContentView
  cancelText="Cancel"
  confirmText="OK"
  initialData={
    Object {
      "batchID": "222",
      "currentDate": "2018/09/18",
      "dateFormat": "YYYY-MM-DD",
      "permitID": "111",
      "receiptID": "333",
    }
  }
  message=""
  permitEvents={
    Array [
      Object {
        "id": 21,
        "name": "event1",
        "selected": false,
      },
    ]
  }
  redirect={[Function]}
  showCancel={false}
  title="Confirm"
>
  <div
    className="copy-permit-content"
  >
    <div
      className="copy-permit-content__date"
    >
      <p>
        Enter the start date of your new reservation
      </p>
      <div>
        <InputDate
          allowBlank={false}
          allowKeySpin={true}
          allowMouseSpin={false}
          className=""
          currency="USD"
          data-qa-id=""
          disabled={false}
          format="YYYY-MM-DD"
          icon=""
          iconHint=""
          id=""
          items={Array []}
          listClassName=""
          listConfig={
            Object {
              "todayBehavior": 2,
            }
          }
          listMaxHeight="300px"
          listPopupOptions={Object {}}
          listWidth="auto"
          min="2018/09/18"
          name=""
          onBlur={[Function]}
          onCalendarClose={[Function]}
          onCalendarOpen={[Function]}
          onFocus={[Function]}
          onListClose={[Function]}
          onListOpen={[Function]}
          onTextChange={[Function]}
          onValueChange={[Function]}
          placeHolder=""
          prefix="an"
          showClear={true}
          showSpinner={false}
          showTrigger={true}
          showTrigger2={false}
          size="md"
          textAlign="left"
          timeStep={30}
          triggerIcon="icon-calendar-m"
          triggerIcon2="icon-clock-m"
          triggerIconHint=""
          triggerIconHint2=""
          triggerIconToggle=""
          triggerIconToggle2=""
          value="2018/09/18"
        >
          <div
            className="an-input-date input-group buttons-1 input-group--md"
          >
            <input
              className="input input-group__field textalign-left input__field"
              data-qa-id=""
              disabled={false}
              id=""
              name=""
              onBlur={[Function]}
              onChange={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              placeholder=""
              type="text"
            />
            <a
              aria-label=""
              className="input-group__item button-toggler"
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <i
                aria-label="chevron icon"
                className="icon icon-calendar-m"
              />
            </a>
          </div>
        </InputDate>
      </div>
    </div>
  </div>
</ContentView>
`;
